After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 651778 - Network: HTTP proxy environment variable not being set
Network: HTTP proxy environment variable not being set
Status: RESOLVED FIXED
Product: gnome-terminal
Classification: Core
Component: general
3.0.x
Other Linux
: Normal major
: ---
Assigned To: GNOME Terminal Maintainers
GNOME Terminal Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-06-03 12:34 UTC by Michal Nowak
Modified: 2011-06-06 15:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Ignore /system/proxy/http/enabled (1.02 KB, patch)
2011-06-06 14:11 UTC, Dan Winship
committed Details | Review

Description Michal Nowak 2011-06-03 12:34:54 UTC
When I set up HTTP proxy it does not propagate as an environment variable (one can easily check in gnome-terminal - $http_proxy nor $HTTP_PROXY is being set) but HTTPS_PROXY and others do propagate.

I use control-center-3.0.1.1-6.fc15.

Reference: https://bugzilla.redhat.com/show_bug.cgi?id=699190
Comment 1 Bastien Nocera 2011-06-03 12:42:54 UTC
gnome-control-center doesn't do that, gnome-terminal does.
Comment 2 Michal Nowak 2011-06-03 13:37:59 UTC
Hmm, well, just to clarify: I don't see HTTP proxy being set in other apps which read proxy setting from environment, such as Thunderbird and Liferea.
Comment 3 Dan Winship 2011-06-06 13:21:18 UTC
(In reply to comment #2)
> Hmm, well, just to clarify: I don't see HTTP proxy being set in other apps
> which read proxy setting from environment, such as Thunderbird and Liferea.

They don't read it from the environment, they read it from gconf, which is where the information came from in GNOME 2. There are separate rh bz bugs filed about updating those programs to use gsettings instead of gconf. Not sure of the upstream status.
Comment 4 Dan Winship 2011-06-06 14:11:53 UTC
Created attachment 189328 [details] [review]
Ignore /system/proxy/http/enabled

This key exists in the schema, but is not actually set by the control
center. Instead, http proxying is enabled if the host and port are
set, just like with the other protocols.
Comment 5 Christian Persch 2011-06-06 14:51:28 UTC
Comment on attachment 189328 [details] [review]
Ignore /system/proxy/http/enabled

Thanks! Please commit to master and gnome-3-0.
Comment 6 Dan Winship 2011-06-06 15:51:48 UTC
done. (assuming the "needs-work" was a misclick)

Attachment 189328 [details] pushed as 4237b68 - Ignore /system/proxy/http/enabled