Ignore /system/proxy/http/enabled

This key exists in the schema, but is not actually set by the control
center. Instead, http proxying is enabled if the host and port are
set, just like with the other protocols.

https://bugzilla.gnome.org/show_bug.cgi?id=651778